kubernetes/services/open-webui/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: aiml
  labels:
    istio.io/dataplane-mode: ambient
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
