kubernetes/services/open-webui/external-dns.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ollama-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ollama.cloud.danmanners.com
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  type: ExternalName
  externalName: unifi-home.homelab.danmanners.com
  selector:
    app.kubernetes.io/instance: ollama
    app.kubernetes.io/component: open-webui
  sessionAffinity: None
