kubernetes/services/open-webui/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: aiml
  namespace: aiml
  annotations:
    external-dns.alpha.kubernetes.io/hostname: chat.capi-core.homelab.danmanners.com
    external-dns.alpha.kubernetes.io/ingress-hostname-source: annotation-only
spec:
  hostnames:
  - chat.capi-core.homelab.danmanners.com
  parentRefs:
  - kind: Gateway
    group: gateway.networking.k8s.io
    name: gwapi
    namespace: default
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: open-webui
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
    timeouts:
      backendRequest: 0s
      request: 0s
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: aiml-cloud
  namespace: aiml
  annotations:
    external-dns.alpha.kubernetes.io/controller: "false"
    external-dns.alpha.kubernetes.io/hostname: ollama.cloud.danmanners.com
    external-dns.alpha.kubernetes.io/target: unifi-home.homelab.danmanners.com
    external-dns.alpha.kubernetes.io/ingress-hostname-source: annotation-only
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  hostnames:
  - ollama.cloud.danmanners.com
  parentRefs:
  - kind: Gateway
    group: gateway.networking.k8s.io
    name: gwapi
    namespace: default
    sectionName: https-cloud
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: open-webui
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
    timeouts:
      backendRequest: 0s
      request: 0s
